--- a/streaming/pubspec.yaml
+++ b/streaming/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
   http: 1.2.2
+  sqflite: ^2.2.8+1
+
+  path_provider: ^2.0.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
